HBASE-25058 Export necessary modules when running under JDK11